--- a/index.html
+++ b/index.html
@@ -3,60 +3,61 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Pink</title>
-  <!-- <link rel="stylesheet" href="css/style.css"> -->
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <header class="page-header">
-    <div class="wrap-inner">
-      <div class="logo">
-        <a href="#" class="logo-link"></a>
-      </div>
-      <a href="#" class="menu-toggle"></a>
-      <nav class="top-menu">
-        <ul class="menu-list">
-          <li class="menu__item"><a href="../index.html" class="menu__link">Информация</a></li>
-          <li class="menu__item"><a href="../blog.html" class="menu__link">Блог</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
-          <li class="menu__item"><a href="../form.html" class="menu__link">Конкурс</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <div class="intro">
-    <div class="wrap-inner">
-      <p class="intro_title">Взгляните на жизнь иначе!</p>
-    </div>
-  </div>
-
-  <div class="download">
-    <div class="wrap-inner">
-      <div class="btn">
-        Скачать приложение
-      </div>
-      <div class="platform">
-        <a href="#" class="platform__icon platform__icon--apple"></a>
-        <a href="#" class="platform__icon platform__icon--android"></a>
-        <a href="#" class="platform__icon platform__icon--winphone"></a>
-      </div>
-      <div class="download__desc">
-        Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-      </div>
-    </div>
-  </div>
-
-  <div class="information">
-    <div class="wrap-inner">
-      <div class="carrot">
-        <p class="carrot__txt">
-          Устали от серости мегаполиса?
-
-          Нам есть, что вам 
-          предложить!</p>
+  <div class="page-wrap">
+    
+    <div class="background-container">
+      <header class="page-header">
+        <div class="wrap-inner">
+          <a href="#" class="logo-link"></a>
+          <a href="#" class="menu-toggle"></a>
+          <nav class="top-menu">
+            <ul class="menu-list">
+              <li class="menu__item"><a href="../index.html" class="menu__link">Информация</a></li>
+              <li class="menu__item"><a href="../blog.html" class="menu__link">Блог</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+              <li class="menu__item"><a href="../form.html" class="menu__link">Конкурс</a></li>
+            </ul>
+          </nav>
         </div>
-      <div class="tips">
+      </header>
+
+      <div class="intro">
+        <div class="wrap-inner">
+          <p class="intro__title">Взгляните на жизнь иначе!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="download">
+      <div class="wrap-inner">
+        <a href="#" class="btn btn__link">Скачать приложение</a>
+        <div class="platform">
+          <a href="#" class="platform__icon platform__icon--apple"></a>
+          <a href="#" class="platform__icon platform__icon--android"></a>
+          <a href="#" class="platform__icon platform__icon--winphone"></a>
+        </div>
+        <div class="download__desc">
+          Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+        </div>
+      </div>
+    </div>
+
+    <div class="megapolis">
+      <div class="wrap-inner">
+        <div class="carrot">
+          <p class="carrot__txt">Устали от серости мегаполиса?</p>
+          <p class="carrot__txt">Нам есть, что вам предложить!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="tips">
+      <div class="wrap-inner">
         <div class="tips__item">
           <p class="tips__title">Поднимает настроение</p>
           <p class="tips__desc">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
@@ -71,99 +72,101 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="review slider">
-    <div class="wrap-inner">
-      <div class="review__item">
-        <p class="review_author">Николай Петров</p>
-        <p class="comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-      </div>
-      <div class="review__item">
-        <p class="review_author">Lorem ipsum.</p>
-        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, hic.</p>
-      </div>
-      <div class="review__item">
-        <p class="review_author">Lorem ipsum.</p>
-        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eos id quod, quia tempore veniam aliquid necessitatibus eaque velit earum.</p>
-      </div>
-      <div class="review__toggle slider__control">
-        <a href="" class="slider-num1 slider--active"></a>
-        <a href="" class="slider-num2"></a>
-        <a href="" class="slider-num3"></a>
+    <div class="review slider">
+      <div class="wrap-inner">
+        <div class="review__item">
+          <p class="review__author">Николай Петров</p>
+          <p class="review__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+        </div>
+        <div class="review__item">
+          <p class="review__author">Lorem ipsum.</p>
+          <p class="review__comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, hic. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto dignissimos adipisci voluptates necessitatibus debitis accusantium rem. Earum consequatur iusto ea, voluptatum dolorem blanditiis quia nihil eos, molestias quaerat nostrum voluptatibus?</p>
+        </div>
+        <div class="review__item">
+          <p class="review__author">Lorem ipsum.</p>
+          <p class="review__comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eos id quod, quia tempore veniam aliquid necessitatibus eaque velit earum.</p>
+        </div>
+        <div class="review-slider slider__control">
+          <a href="" class="review__toggle slider__toggle slider__toggle--active"></a>
+          <a href="" class="review__toggle slider__toggle"></a>
+          <a href="" class="review__toggle slider__toggle"></a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="price slider">
-    <div class="wrap-inner">
-      <div class="tarif">
-        <div class="tarif__item">
-          <div class="tarif__desc">
-            <p class="tarif__name">Стандарт</p>
-            <p class="tarif__price">3,99 usd</p>
+    <div class="price slider">
+      <div class="wrap-inner">
+        <div class="tarif">
+          <div class="tarif__item">
+            <div class="tarif__desc">
+              <p class="tarif__name">Стандарт</p>
+              <p class="tarif__price">3,99 usd</p>
+            </div>
+            <div class="option">
+              <div class="tarif__option tarif__option--active">Розовый фильтр</div>
+              <div class="tarif__option tarif__option--active">Смайлики</div>
+              <div class="tarif__option">Комментарии</div>
+            </div>
           </div>
-          <div class="option">
-            <div class="tarif__option tarif__option--active">Розовый фильтр</div>
-            <div class="tarif__option tarif__option--active">Смайлики</div>
-            <div class="tarif__option">Комментарии</div>
+          <div class="tarif__item">
+            <div class="tarif__desc">
+              <p class="tarif__name">Lorem</p>
+              <p class="tarif__price">3,99 USD</p>
+            </div>
+            <div class="option">
+              <div class="tarif__option">asdasas</div>
+              <div class="tarif__option">Lorem ipsum.</div>
+              <div class="tarif__option">Lorem ipsum.</div>
+            </div>
+          </div>
+          <div class="tarif__item">
+            <div class="tarif__desc">
+              <p class="tarif__name">lorem</p>
+              <p class="tarif__price">3,99 USD</p>
+            </div>
+            <div class="option">
+              <div class="tarif__option">Lorem ipsum.</div>
+              <div class="tarif__option">Lorem</div>
+              <div class="tarif__option">Lorem ipsum.</div>
+            </div>
           </div>
         </div>
-        <div class="tarif__item">
-          <div class="tarif__desc">
-            <p class="tarif__name">Lorem</p>
-            <p class="tarif__price">3,99 USD</p>
-          </div>
-          <div class="option">
-            <div class="tarif__option"></div>
-            <div class="tarif__option">Lorem ipsum.</div>
-            <div class="tarif__option">Lorem ipsum.</div>
-          </div>
+        <div class="price-slider slider__control">
+          <a href="" class="price__toggle slider__toggle"></a>
+          <a href="" class="price__toggle slider__toggle slider__toggle--active"></a>
+          <a href="" class="price__toggle slider__toggle"></a>
         </div>
-        <div class="tarif__item">
-          <div class="tarif__desc">
-            <p class="tarif__name">lorem</p>
-            <p class="tarif__price">3,99 USD</p>
-          </div>
-          <div class="option">
-            <div class="tarif__option">Lorem ipsum.</div>
-            <div class="tarif__option">Lorem</div>
-            <div class="tarif__option">Lorem ipsum.</div>
-          </div>
-        </div>
-      </div>
-      <div class="price__toggle slider__control">
-        <a href="" class="slider-num1"></a>
-        <a href="" class="slider-num2 slider--active"></a>
-        <a href="" class="slider-num3"></a>
       </div>
     </div>
-  </div>
 
-  <footer class="index-footer">
-    <div class="wrap-inner">
-      <p class="call-us">
-        Остались вопросы?
-        Свяжитесь с нами!</p>
-      <div class="contacts">
-        <div class="contacts__item">
-          <p class="contact__key">Звоните:</p>
-          <a href="tel:+78125556666" class="contact__value">+7 (812) 555-66-66</a>
-        </div>
-        <div class="contacts__item">
-          <p class="contact__key">Пишите:</p>
-          <a href="mailto:mail@htmlacademy.ru?subject=Вопрос по Pink" class="contact__value">mail@htmlacademy.ru</a>
-        </div>
-        <div class="contacts__item">
-          <p class="contact__key">Приезжайте в гости:</p>
-          <a href="https://maps.yandex.ru/-/CVsYnPNW" class="contact__value">ул. Большая Конюшенная, 19/8</a>
+    <footer class="index-footer">
+      <div class="wrap-inner">
+        <div class="call-us">
+          Остались вопросы?<br>
+          Свяжитесь с нами!</div>
+        <div class="contacts">
+          <div class="contacts__item">
+            <p class="contact__key">Звоните:</p>
+            <a href="tel:+78125556666" class="contact__value">+7 (812) 555-66-66</a>
+          </div>
+          <div class="contacts__item">
+            <p class="contact__key">Пишите:</p>
+            <a href="mailto:mail@htmlacademy.ru?subject=Вопрос по Pink" class="contact__value">mail@htmlacademy.ru</a>
+          </div>
+          <div class="contacts__item">
+            <p class="contact__key">Приезжайте в гости:</p>
+            <a href="https://maps.yandex.ru/-/CVsYnPNW" class="contact__value">ул. Большая Конюшенная, 19/8</a>
+          </div>
         </div>
       </div>
+      
       <div class="map">
-
+        <iframe class="map-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d999.3584691026533!2d30.320685105128277!3d59.936839026022774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x14541b47a2366484!2sSubway!5e0!3m2!1sru!2sru!4v1432232087585" width="100%" height="200" frameborder="0" style="border:0"></iframe>
       </div>
-    </div>
-  </footer>
+    </footer>
+
+  </div>
 
   <!-- <script src="js/script.js"></script> -->
 
