<megapolis> for tablet

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="option">
               <div class="tarif__option tarif__option--active">Розовый фильтр</div>
               <div class="tarif__option tarif__option--active">Смайлики</div>
-              <div class="tarif__option">Комментарии</div
+              <div class="tarif__option">Комментарии</div>
             </div>
           </div>
           <div class="tarif__item">
