--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
       </div>
     </div>
 
+    <div class="effect">
+      <div class="wrap-inner">
+        <div class="effect__item">
+          <p class="effect__title">Эффект на 24 часа!</p>
+          <p class="effect__desc">Британские ученые провели исследования и доказали, что положительный эффектот использования приложения длится целые сутки!</p>
+          <a class="effect__more" href="#">Узнать больше об исследовании</a>
+        </div>
+      </div>
+    </div>
+
     <div class="review slider">
       <div class="wrap-inner">
         <div class="review__item">
