--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="wrap-inner">
         <div class="effect__item">
           <p class="effect__title">Эффект на 24 часа!</p>
-          <p class="effect__desc">Британские ученые провели исследования и доказали, что положительный эффектот использования приложения длится целые сутки!</p>
+          <p class="effect__desc">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
           <a class="effect__more" href="#">Узнать больше об исследовании</a>
         </div>
       </div>
@@ -88,6 +88,7 @@
       <div class="wrap-inner">
         <div class="review__item">
           <p class="review__author">Николай Петров</p>
+          <p class="review__author-desc">25 лет, водитель трамвая</p>
           <p class="review__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
         </div>
         <div class="review__item">
