--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">  
   <title>HTML Academy: Pink</title>
-  <link rel="stylesheet" href="dist/normalize.css">
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -59,15 +59,16 @@
 
     <div class="tips">
       <div class="wrap-inner">
-        <div class="tips__item">
+        <div class="tips__item tips__item--black">
+          <!--  <img src="img/tips-pic_1.png" alt="" class="tips__pic">  -->
           <p class="tips__title">Поднимает настроение</p>
           <p class="tips__desc">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
         </div>
-        <div class="tips__item">
+        <div class="tips__item tips__item--color">
           <p class="tips__title">Меняет мир вокруг</p>
           <p class="tips__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
         </div>
-        <div class="tips__item">
+        <div class="tips__item tips__item--smile">
           <p class="tips__title">Заводит новых друзей</p>
           <p class="tips__desc">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
         </div>
@@ -89,7 +90,7 @@
         <div class="review__item">
           <p class="review__author">Николай Петров</p>
           <p class="review__author-desc">25 лет, водитель трамвая</p>
-          <p class="review__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          <p class="review__comment">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
         </div>
         <div class="review__item">
           <p class="review__author">Lorem ipsum.</p>
@@ -159,21 +160,21 @@
           </tr>
           <tr>
             <td class="col-1">Розовый фильтр</td>
-            <td class="col-2 price__option--active"></td>
+            <td class="col-2 price__option price__option--active"></td>
             <td class="col-3 price__option"></td>
             <td class="col-4 price__option"></td>
           </tr>
           <tr>
             <td class="col-1">Смайлики</td>
-            <td class="col-2 price__option--active"></td>
-            <td class="col-3 price__option--active"></td>
+            <td class="col-2 price__option price__option--active"></td>
+            <td class="col-3 price__option price__option--active"></td>
             <td class="col-4 price__option"></td>
           </tr>
           <tr>
             <td class="col-1">Комментарии</td>
-            <td class="col-2 price__option--active"></td>
-            <td class="col-3 price__option--active"></td>
-            <td class="col-4 price__option--active"></td>
+            <td class="col-2 price__option price__option--active"></td>
+            <td class="col-3 price__option price__option--active"></td>
+            <td class="col-4 price__option price__option--active"></td>
           </tr>
         </table>
       </div>
@@ -201,11 +202,11 @@
       </div>
       
       <div class="map">
-        <iframe class="map-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d999.3584691026533!2d30.320685105128277!3d59.936839026022774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x14541b47a2366484!2sSubway!5e0!3m2!1sru!2sru!4v1432232087585" width="100%" height="200" frameborder="0" style="border:0"></iframe>
+        <iframe class="map-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d999.3584691026533!2d30.320685105128277!3d59.936839026022774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x14541b47a2366484!2sSubway!5e0!3m2!1sru!2sru!4v1432232087585" width="100%" height="100%" frameborder="0" style="border:0"></iframe>
       </div>
     </div>
     
-    <footer class="page-footer">
+    <footer class="page-footer index-footer">
       <div class="wrap-inner">
         <a href="#" class="footer-logo"></a>
         <div class="social">
@@ -214,7 +215,7 @@
           <a href="#" class="social-link social-link--youtube"></a>
         </div>
         <div class="copyright">
-          Разработано <a href="#" class="copyright-link copyright-link--htmlacademy"></i></a>
+          Разработано <a href="#" class="copyright-link copyright-link--htmlacademy"></a>
         </div>
       </div>
     </footer>
